# ml-prototype

./: .gitignore  Dockerfile  README.md  bootstrap.sh  config.yaml  image_inspect.py  pyproject.toml  requirements.txt  test_gpu.py  test_notebook.ipynb
.cursor/rules/: ml-prototype.mdc
ml_prototype/: __init__.py  cli.py  module.py
ml_prototype/application/: backend.py  robot_arm.py  tools.py  voice.py
ml_prototype/config/: auto_encoder.yaml  base_language_model.yaml  base_transformer_lm.yaml  language_model.yaml  transformer_lm.yaml
ml_prototype/lm/: autoencoder_model.py  autoencoder_module.py  data_module.py  inference.py  model.py  module.py  tokenizer.py  tokenizer_tool.py
ml_prototype/misc/: auc.py  extract_images.py  fish_tts.py
ml_prototype/mm_embedding/: config.py  config.yaml  contrastive.py  csv_to_parquet.py  data.py  dataloader.py  dryrun_train_embedding.py  module.py  preprocess.py  train.py  train_embedding.py  util.py
ml_prototype/post_training/Llama-3.2-1B-Instruct/: full_single_device.yaml  lora_dpo_single_device.yaml
ml_prototype/post_training/Llama-3.2-3B-Instruct/: full_single_device.yaml  lora_dpo_single_device.yaml
ml_prototype/post_training/configs/torchtune/Llama-3.2-1B-Instruct/: full_distributed.yaml  full_single_device.yaml  lora_dpo_single_device.yaml  lora_single_device.yaml
ml_prototype/post_training/configs/torchtune/Llama-3.2-3B-Instruct/: full_distributed.yaml  full_single_device.yaml  lora_distributed.yaml  lora_dpo_single_device.yaml  lora_grpo_distributed.yaml  lora_single_device.yaml
ml_prototype/post_training/process/: fetch_and_upload_dataset.py  generate_character_data.py  merge_logiqa_jeopardy.py
ml_prototype/post_training/scripts/: dpo_data_process.ipynb  generate_character_data.py  trump_dpo_data_generation.ipynb
ml_prototype/post_training/torchtune/Llama-3.2-1B-Instruct/: full_distributed.yaml
ml_prototype/post_training/torchtune/Llama-3.2-3B-Instruct/: grpo_full_finetune.yaml  lora_dpo_reasoning_single_device.yaml  lora_single_device.yaml
ml_prototype/post_training/unsloth/: mini_reasoning_grpo.py
ml_prototype/post_training/unsloth/Llama-3.2-3B-Instruct/: README.md  grpo_finetune.py  grpo_finetune_llama3_2_3b.py  grpo_llama3.2-3b.ipynb  mini_reasoning_grpo.py
ml_prototype/rl/dodge/: demo_game.py  dodge_game.py  qlearn.py  run_dodge_game.py
ml_prototype/tests/: test_module.py
tests/: test_module.py
tests/application/: test_robot_arm.py
tests/lm/: test_data_module.py
tests/mm_embedding/: test_data.py  test_preprocess.py
tests/mm_embedding/test_module/: test_feature_transformation.py  test_image_encoder.py  test_multimodal.py  test_text_encoder.py
(+13 files in other folders)
