[tool.poetry]
name = "ml-prototype"
version = "0.1.0"
description = ""
authors = ["Yx Jiang <2237303+yxjiang@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ml_prototype"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.1"
torchtext = "0.15.2"
torchmetrics = "1.0.1"
tqdm = "4.65.0"
numpy = "^1.25.1"
lightning = "^2.0.6"
jsonargparse = {extras = ["signatures"], version = "^4.23.1"}
sentencepiece = "0.1.99"
tensorboard = "^2.14.0"
tokenizers = "^0.14.1"
openai = "^1.3.3"
python-dotenv = "^1.0.0"
ffmpeg = "^1.4"
pyaudio = "^0.2.14"
colorama = "^0.4.6"
tavily-python = "^0.2.8"
flask = "^3.0.0"
pygame = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
black = "23.7.0"
isort = "5.12.0"
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"