[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-prototype"
version = "0.1.0"
description = "The prototype of ML models."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Yx Jiang", email = "2237303+yxjiang@users.noreply.github.com"}]

dependencies = [
    "torch==2.5.0",
    "tqdm==4.65.0",
    "numpy>=1.25.1",
    "lightning==2.4.0",
    "sentencepiece==0.1.99",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "wandb>=0.18.5",
    "torchtext>=0.18.0",
    "python-dateutil>=2.9.0.post0",
    "torchmetrics>=1.5.0",
    "transformers>=4.45.2",
    "jsonargparse[signatures]>=4.33.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "black==23.7.0",
    "isort==5.12.0",
    "flake8==6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ml_prototype"]
